test/errors/structure_types_error/zs/recursive_error.zs
package recursive_error;

struct Item
{
    uint16      param;
    uint32      extraParam;
    Item        item;
};
